# custom-kfp-components

./: README.md  pyproject.toml
custom_kfp_components/: components.py
custom_kfp_components/data_ingestion/: load_csv.py
custom_kfp_components/data_preparation/: label_encoding.py
demo/: demo_pipeline_components.py
tests/unit_tests/: test_label_encoding.py  test_load_csv.py
